# sqore-dialog-builder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  simple_rust_release.yml
src/: dialog.rs  main.rs  sqore_widgets.rs
wix/: main.wxs
