[package]
name = "sqore-dialog-builder"
version = "0.1.0"
edition = "2021"
authors = ["Queen Of Squiggles"]
repository = "https://github.com/QueenOfSquiggles/sqore-dialog-builder"
description = "A desktop tool for crafting dialog tracks for the Squiggles Core dialog system"



[package.metadata.wix]
upgrade-guid = "5B1CE108-D999-4FCF-A4BB-A79B3F3E834E"
path-guid = "457726BA-F8DC-466F-9940-7DD897F48A9E"
license = false
eula = false

[dependencies]
eframe = "0.25.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rfd = "0.11.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = []
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"

[workspace.metadata.dist.dependencies.apt]
libgtk-3-dev = "*"
