[package]
name = "sqore-dialog-builder"
version = "0.1.0"
edition = "2021"
authors = ["Queen Of Squiggles"]
repository = "https://github.com/QueenOfSquiggles/sqore-dialog-builder"
description = "A desktop tool for crafting dialog tracks for the Squiggles Core dialog system"



[package.metadata.wix]
upgrade-guid = "5B1CE108-D999-4FCF-A4BB-A79B3F3E834E"
path-guid = "457726BA-F8DC-466F-9940-7DD897F48A9E"
license = false
eula = false

[dependencies]
eframe = "0.25.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rfd = "0.11.0"
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v7"] }